# rtc-engine

./: README.md  products.json  pyproject.toml  requirements.txt
Word embeddings/: Word embeddings.ipynb
data/: mocked_results.txt  products.json  products_freshful.json  recipes.json
engine/: algorithm.py  main.py  mock.py  unit_converter.py
engine/fetcher/: products_old.json  products_scraper.ipynb  recipe.json  recipes.ipynb  recipes_bizon.ipynb  recipes_chatgpt.ipynb
engine/models/: model.py
own_recipes/: Indian_Chicken_Curry.json
products/: list.json
