[tool.poetry]
name = "engine"
version = "0.0.1"
description = "Recipe To Cart"
authors = ["RTC <rtc@adoreme.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pydantic = "^2.0.2"
google-cloud-firestore = "^2.11.1"
pandas = "^1.5.3"
jupyter = "^1.0.0"

# implicit als dependencies
implicit = { version = "^0.6.2", optional = true }

[tool.poetry.extras]
baseline = []
implicit_als = ["implicit"]


[build-system]
requires = ["poetry>=1.3.1"]
build-backend = "poetry.masonry.api"



